Fixed waves issue on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -50,6 +50,10 @@ p {
   background: -webkit-linear-gradient(left, rgba(78, 95, 251, 0.2) 0%, rgba(78, 95, 251, 0.9) 100%);
   background: linear-gradient(to right, rgba(78, 95, 251, 0.2) 0%, rgba(78, 95, 251, 0.9) 100%); }
 
+.z-index-1 {
+  z-index: 1;
+}
+
 /*** HEAD ***/
 .head {
   height: 470px;
@@ -202,46 +206,42 @@ p {
   filter: grayscale(0%); }
 
 /* WAVE */
-.river-wave-area {
-  height: 5%;
+.wave-area {
+  position: absolute;
   width: 100%;
-  position: absolute;
-  top: 440px;
+  height: 300px;
+  top: 80px;
   left: 0;
-  background: white;
-  z-index: 1; }
+}
 
-.river-wave {
-  background: url("../medias/wave.svg") repeat-x;
-  position: absolute;
-  top: -100px;
-  width: 6400px;
-  height: 100px;
-  animation: river-wave 35s cubic-bezier(0.36, 0.45, 0.63, 0.53) infinite;
-  transform: translate3d(0, 0, 0); }
+.waves {
+  position: relative;
+  width: 100%;
+  height: 400px;
+  background-image: 
+    url("../medias/wave.svg"),
+    url("../medias/wave.svg"),
+    url("../medias/wave.svg");
+  background-repeat: repeat-x;
+  background-size: 1600px 50%;
+  background-position: 0 130%, -50px 130%, 500px 130%;
+  animation: 20s waves linear infinite forwards;
+}
 
-.river-wave:nth-of-type(2) {
-  top: -56px;
-  animation: river-wave 20s cubic-bezier(0.36, 0.45, 0.63, 0.53) -0.125s infinite, swell 7s ease -1.25s infinite;
-  opacity: 1; }
+@keyframes waves {
+  to {
+    background-position: 1600px 130%, 3150px 130%, 5300px 130%;
+  }
+}
 
-@keyframes river-wave {
-  0% {
-    margin-left: 0; }
-  100% {
-    margin-left: -1600px; } }
-@keyframes swell {
-  0%, 100% {
-    transform: translate3d(0, -45px, 0); }
-  50% {
-    transform: translate3d(0, 5px, 0); } }
+
 /*** RESPONSIVE ***/
 @media screen and (max-width: 995px) {
   .section {
     padding: 40px 80px 40px 80px; }
 
   .label {
-    text-align: left;
+    text-align: center;
     margin-bottom: 35px; }
 
   .card-columns {
